GNOME Bugzilla – Bug 663816
memory corruption in gkbd-status.c
Last modified: 2011-12-05 19:45:10 UTC
gkbd_status_render_cairo calls gdk_color_free() on a (mislabelled) GdkRGBA. This causes an nondeterministic crash in gnome-settings-daemon (at least in gnome3 fallback mode).
Created attachment 201198 [details] [review] GtkTrayIcon:fg-color is a GdkRGBA ... and not a GdkColor. So use the right variable, and the right free function. Fixes a crash on session startup in gnome-settings-daemon, when using the gnome3 fallback session.
Ping? Ok to commit this to master?
Pushed. Thanks!