GtkTrayIcon:fg-color is a GdkRGBA

... and not a GdkColor. So use the right variable, and the right free function.
Fixes a crash on session startup in gnome-settings-daemon, when using the gnome3
fallback session.

https://bugzilla.gnome.org/show_bug.cgi?id=663816